Fixes layout issue on french download page (fixes #38)

--- a/styles/style.less
+++ b/styles/style.less
@@ -227,7 +227,7 @@ body
         text-align: center;
         font-size: 26pt;
         font-weight: normal;
-        
+
         a.h1-link
         {
             color: #000;
@@ -278,7 +278,7 @@ body
         color: #000;
         font-size: 16pt;
         font-weight: normal;
-        
+
         a.h3-link
         {
             color: #000;
@@ -312,7 +312,7 @@ body
 
     q
     {
-        font-style: italic;    
+        font-style: italic;
     }
 
     .important
@@ -370,18 +370,18 @@ body
             color: #555;
             background-color: #f0f0f0;
         }
-            
+
         th.expand-left
         {
             width: 20%;
         }
-            
+
         th.expand-right
         {
             width: 80%;
         }
     }
-    
+
     table.expanded
     {
         width: 100%;
@@ -494,7 +494,7 @@ body
         div
         {
             text-align: center;
-            
+
             ul
             {
                 text-align: left;
@@ -654,20 +654,20 @@ body
             }
         }
     }
-    
+
     div.faq
     {
         p, pre, ul, ol
         {
             padding-left: 0.75em;
-            
+
             ul, ol
             {
                 padding-left: 0;
             }
         }
     }
-    
+
     div.issues
     {
         ol
@@ -675,7 +675,7 @@ body
             padding-left: 15px;
         }
     }
-    
+
     div.style
     {
         td
@@ -698,11 +698,11 @@ body
 
         td.os
         {
-            width: 15%;
+            width: 13%;
             font-size: 16pt;
             background-color: #e2e2e2;
         }
-        
+
         td.notice
         {
             font-size: 10pt;
